public/stylesheets/main.css
/* ... */
.widget-contact{
  text-align: center;
}

.widget-contact address{
  font-size: 16px;
  line-height: 24px;
  color: white;
}

.widget-contact address strong{
  display: block;
  margin-bottom: 10px;
}

.contact-form{
  margin-bottom: 80px;
  display: block;
}

.margin-top{
  margin-top: 80px!important;
}

.link-block, .service-info {
  position: relative;
  min-height: 150px;
  text-align: center;
  padding-top: 10px;
  padding-bottom: 0.15rem;
  border-radius: 20px;
  text-decoration: none !important;
  background-color: #6C777F !important;
  transition: all 0.15s ease-in-out;

  /*  transition-delay: 0.05s;*/
}

.link-item {
  margin: 1rem 0.15rem;
}

.link-pic {
  width: 100%;
  margin-bottom: 0.75rem;
  display: block;
  margin-bottom: -20px;
  z-index: -1;
  border: 2px solid black;
}

.service-info ul{
  color: white !important;
}

.link-block hr, .service-info hr {
  border-color: transparent;/*#002268;*/
  border-width: 3px;
  margin: 0 0 10px 0;
}

.link-block:focus {
  outline: none;
}

.topic_name, .service-info h5 {
  color: #002268 !important;
  font-weight: bold;
  font-size: 27.5px;
  margin-bottom: 2.5px;
}

.topic_desc {
  color: #FFF;
  margin-left: 1rem;
  margin-right: 1rem;
}

.topic_desc p, p.topic_desc {
  font-size: calc(15px + 0.50vw);
}

.link-shade {
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  width: 5px;
  opacity: 0;
  transition: all 0.3s ease-in-out;
  /*  transition-delay: 0.75s;*/
  font-size: .01rem;
  border-bottom-right-radius: 5px 20px;
  border-top-right-radius: 5px 20px;
  outline: none;
}

.topic_desc p, p.topic_desc {
  transition: all 0.3s ease-in-out;
}

a:hover .link-block .link-shade {
  opacity: 1;
  background-color: #002268;
  width: 2.25rem;
  color: #6C777F;
  font-size: 4.5rem;
  outline: none;
  border-bottom-right-radius: 20px;
  border-top-right-radius: 20px;
  overflow-y: hidden;
}

a:hover .link-block, a:hover .service-info {
  padding-right: 2rem;
  padding-left: 0;
  margin-left: 0;
}

.topic_desc p, p.topic_desc {
  transition-duration: 0.15s !important;
}


a:hover .topic_desc p, a:hover p.topic_desc {
  margin-left: 5px;
  margin-bottom: 0.125rem;
}

.link-block p {
  margin-bottom: 0.15rem;
  text-align: center;
}

.link-block p:last-of-type {
  margin-bottom: 1.5rem;
}

.topic-link:hover {
  text-decoration: none;
}

.topic-link:focus {
  outline: none;
}

#top {
  background-color: white;
  margin-top: 470px;
  padding: 30px 20px 50px 20px;
}

.top {
  min-height: 150px;
}

.about {
  background: #404244;
  padding: 60px 0;
  margin-bottom: 50px;
}

.no-margin-bottom{
  margin-bottom: 0!important;
  padding-bottom: 0!important;
}

.no-margin-bottom .about{
  margin-bottom: 0!important;
  padding-bottom: 0!important;
}

.about .col-md-4{
  border-left: 1px solid rgba(255, 255, 255, .5);
}

.about a {
  color: #002268 !important;
}

.about hr {
  border-color: #FFF;
}

.about h1, .about h2, .about h3, .about h4, .about h5, .about h6 {
  color: #FFF;
}

.about h5{
  font-family: 'HelveticaNeueMedium', sans-serif;
  font-size: 35px;
  margin-bottom: 20px;
}

.about h6{
  font-family: 'HelveticaNeueBold', sans-serif;
  font-size: 16px;
  margin-bottom: 20px;
  font-weight: bold;
}

.about p{
  font-family: 'HelveticaNeueMedium', sans-serif;
  font-size: 16px;
  line-height: 26px;
  margin-bottom: 20px;
  color: white;
}

.card-block{
  margin-bottom: 40px!important;
}

.card-deck .empty{
  border: none!important;
}

.card-body a{
  position: relative;
}

.card-deck .card-body a svg{
  position: absolute;
  color: #A9A9A9;
  top: 0;
  right: 0;
}

.card-deck .card-body a:hover svg{
  color: #12345A;
}

.card-deck a h5{
  font-family: 'HelveticaNeueMedium', sans-serif;
  font-size: 18px;
  font-weight: bold;
  color: #404244;
  margin-left: 0!important;
  padding-left: 0!important;
}

.card-deck a p{
  font-family: 'HelveticaNeue', sans-serif;
  font-size: 14px;
  color: #404244;
}

.container-fluid {
  background-color: white;
  margin-bottom: 0;
}

em {
  font-style: italic;
}

abbr {
  text-decoration: none !important;
}

.topic-link {
  display: inline-block;
  height: 100%;
  width: 100%;
}

.next {
  padding-top: 20px;
}

.navs {
  /*  transform: skewX(3deg);*/
  outline: none;
}

.long-intro {
  padding-bottom: 80px;
}

.client-quote {
  color: #FFF;
  font-size: 32px;
  border: none;
  text-align: center;
  padding: 30px;
}

.client-quote footer {
  text-align: center;
  color: #FFF;
}

.client-quote p {
  display: block;
  font-family: 'HelveticaNeue', sans-serif!important;
  font-weight: 100!important;
  font-size: 32px!important;
  line-height: 45px;
  margin-bottom: 40px;
}

#calendar1{
  position: relative;
}

.fc-close{
color: white;}

.fc-header.fc-widget-header{
  background: #12345A!important;
}

.fc-time, .fc-title{
  color: white!important;
}

.blockquote-footer{
  font-size: 16px;
  font-family: 'HelveticaNeueMedium', sans-serif;
}

.list-header {
  margin-bottom: 0.15rem;
}

#blank-space {
  background-attachment: local;
  background: #FFF;
  height: 2px;
  width: 100%;
  padding: 20px 0;
}

#back-button {
  margin-top: 50px;
}

.questions p {
  margin: 0;
  padding: 0.05rem; 0.5rem;
}

.questions {
  margin: 1.5rem 0;
}

.testify {
  padding: 30px 0;
  background-color: #12345A!important;
  color: #FFF;
  margin-bottom: 40px;
}

.callout {
  padding: 40px 0px;
  margin-top: 0px;
  background-color: white;
  /* height: 300px; */
  overflow: hidden;
  position: relative;
}

.callout.lg {
  min-height: 300px !important;
}

.callout h1 {
  display: block;
  color: #12345A;
  font-size: 35px;
  font-family: 'HelveticaNeueMedium', sans-serif;
  text-align: center;
}

.callout.long h1 {
  font-size: 2.25vw;
}

.callout-photo-container {
  display: block;
  text-align: center;
  vertical-align: middle;
  overflow: hidden;
  margin-bottom: 20px;
}

.callout-photo-container-left {
  display: block;
  text-align: left;
  vertical-align: middle;
  overflow: hidden;
}
/* ... */

